--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <title>Japanese restaurant</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div>
+    <div id="wrapper">
         <header>
+            <img src="header.jpg" alt="header">
             <nav>
+                <ul>
+                    <a href="#">home</a>
+                    <a href="#">classes</a>
+                    <a href="#">recipes</a>
+                    <a href="#">about</a>
+                    <a href="#">contact</a>
+                </ul>
             </nav>
         </header>
         <section class="home">
@@ -25,7 +36,8 @@
                     <h2>Japanese Vegetarian</h2>
                     <h3>Five week course in London</h3>
                 </hgroup>
-                <p>A five week introduction to traditional Japanese vegetarian meals, teaching you a selection of rice and noodle dishes.</p>
+                <p>A five week introduction to traditional Japanese vegetarian meals, teaching you a selection of rice
+                    and noodle dishes.</p>
             </article>
             <article>
                 <figure>
@@ -36,7 +48,8 @@
                     <h2>Sauces Masterclass</h2>
                     <h3>One day workshop</h3>
                 </hgroup>
-                <p>An intensive one-day course looking at how to create the most delicious sauces for use in a range of Japanese cookery.</p>
+                <p>An intensive one-day course looking at how to create the most delicious sauces for use in a range of
+                    Japanese cookery.</p>
             </article>
         </section>
         <aside>
@@ -48,6 +61,7 @@
                 <a href="#">Mizutaki (chicken stew)</a>
             </section>
         </aside>
+        <footer>© 2011 Japanese Restaurant</footer>
     </div>
 </body>
 
